--- a/WSUI.Module/View/ContactDataView.xaml
+++ b/WSUI.Module/View/ContactDataView.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:service="clr-namespace:WSUI.Module.Service"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:behaviors="clr-namespace:WSUI.Infrastructure.Behaviors;assembly=WSUI.Infrastructure"
              x:Name="this"
                               
              >
@@ -56,7 +58,9 @@
                           SelectedItem="{Binding Path=Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged,ElementName=this}"
                           ><!--SelectedItem="{Binding Path=Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"-->
 
-
+                                <i:Interaction.Behaviors>
+                                    <behaviors:ListBoxBehavior></behaviors:ListBoxBehavior>
+                                </i:Interaction.Behaviors>
                             </ListBox>
                         </StackPanel>
                     </Grid>
@@ -79,7 +83,9 @@
                  service:DoubleClickBehavior.DoubleClickHandler="{Binding DoubleClickCommand}"
                  HorizontalContentAlignment="Stretch"
                  >
-
+            <i:Interaction.Behaviors>
+                <behaviors:ListBoxBehavior></behaviors:ListBoxBehavior>
+            </i:Interaction.Behaviors>
         </ListBox>
     </Grid>
 </UserControl>
