--- a/WSUI.Module/View/EmailDataView.xaml
+++ b/WSUI.Module/View/EmailDataView.xaml
@@ -37,7 +37,7 @@
             </Style>
 
             <converters:StringToStringConverter x:Key="StringConverter" />
-
+            
         </ResourceDictionary>
     </UserControl.Resources>
     
@@ -53,11 +53,13 @@
                         ItemTemplateSelector="{StaticResource templateSelector}"
                         attachedProperty:ListBoxSelectedObjectAttachedProperty.SelectedObject="{Binding Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                         attachedProperty:ListBoxShouldSetSelectAttachedProperty.ShouldSetSelect="True"
-                        ContextMenu="{StaticResource ResourceKey=contextMenu}"
                         ScrollViewer.ScrollChanged="ListBox_ScrollChanged_1"
                         service:DoubleClickBehavior.DoubleClickHandler="{Binding DoubleClickCommand}"
                         HorizontalContentAlignment="Stretch"
                       >
+            <listBox:WSUIListBox.ContextMenu>
+                <ContextMenu ItemsSource="{Binding EmailMenuItems,UpdateSourceTrigger=PropertyChanged}"  ></ContextMenu>
+            </listBox:WSUIListBox.ContextMenu>
         </listBox:WSUIListBox>
     </Grid>
 </UserControl>
