--- a/WSUI.Module/View/AllFilesDataView.xaml
+++ b/WSUI.Module/View/AllFilesDataView.xaml
@@ -104,6 +104,9 @@
                     <listBox:WSUIListBox.ContextMenu>
                         <ContextMenu ItemsSource="{Binding EmailMenuItems,UpdateSourceTrigger=PropertyChanged}"  ></ContextMenu>
                     </listBox:WSUIListBox.ContextMenu>
+                    <i:Interaction.Behaviors>
+                        <behaviorsInfra:SelectedItemTrackingBehavior TrackedItem="{Binding CurrentTrackedObject,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></behaviorsInfra:SelectedItemTrackingBehavior>
+                    </i:Interaction.Behaviors>
                 </listBox:WSUIListBox>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right"
@@ -139,6 +142,7 @@
                     <i:Interaction.Behaviors>
                         <behaviors:WSUIListboxSelectOnClickBehavior></behaviors:WSUIListboxSelectOnClickBehavior>
                         <behaviorsInfra:ListBoxBehavior></behaviorsInfra:ListBoxBehavior>
+                        <behaviorsInfra:SelectedItemTrackingBehavior TrackedItem="{Binding CurrentTrackedObject,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></behaviorsInfra:SelectedItemTrackingBehavior>
                     </i:Interaction.Behaviors>
                     <ListBox.ContextMenu>
                         <ContextMenu ItemsSource="{Binding FileMenuItems,UpdateSourceTrigger=PropertyChanged}"  ></ContextMenu>
